--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="/css/styles.css" />
   <title>Memory Game</title>
+  <script type="module" src="js/components/my-memory-game/index.js"></script>
   <script type="module" src="js/index.js"></script>
 </head>
 
 <body>
+  <my-memory-game></my-memory-game>
 
 </body>
 
