--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" href="/css/styles.css" />
+  <link rel="manifest" href="memory.webmanifest">
   <title>Memory Game</title>
   <script type="module" src="js/components/my-memory-game/index.js"></script>
   <script type="module" src="js/index.js"></script>
